--- a/wp-content/themes/mytheme/assets/styles/scss/03_layout/_entry.scss
+++ b/wp-content/themes/mytheme/assets/styles/scss/03_layout/_entry.scss
@@ -23,8 +23,6 @@
  */
 
 .entry {
-	padding-top: 48px;
-    padding-bottom: 48px;
 }
 
 .entry-header {
